docs/api/qiskit/0.19/qiskit.aqua.components.neural_networks.GenerativeNetwork.mdx
---
title: GenerativeNetwork (v0.19)
description: API reference for qiskit.aqua.components.neural_networks.GenerativeNetwork in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.neural_networks.GenerativeNetwork
---

# GenerativeNetwork

<Class id="qiskit.aqua.components.neural_networks.GenerativeNetwork" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/neural_networks/generative_network.py" signature="GenerativeNetwork" modifiers="class">
  Base class for generative Quantum and Classical Neural Networks.

  This method should initialize the module, but raise an exception if a required component of the module is not available.

  ## Methods

  <span id="generativenetwork-get-output" />

  ### get\_output

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.get_output" signature="GenerativeNetwork.get_output(quantum_instance, qc_state_in, params, shots)" modifiers="abstract">
    Apply quantum/classical neural network to given input and get the respective output

    **Parameters**

    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – Quantum Instance, used to run the generator circuit.
    *   **qc\_state\_in** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *or vector*) – corresponding to the network input state
    *   **params** (*numpy.ndarray*) – parameters which should be used to run the generator, if None use self.\_params
    *   **shots** (*int*) – if not None use a number of shots that is different from the number set in quantum\_instance

    **Returns**

    Neural network output

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  <span id="generativenetwork-loss" />

  ### loss

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.loss" signature="GenerativeNetwork.loss()" modifiers="abstract">
    Loss function used for optimization
  </Function>

  <span id="generativenetwork-set-seed" />

  ### set\_seed

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.set_seed" signature="GenerativeNetwork.set_seed(seed)" modifiers="abstract">
    Set seed.

    **Parameters**

    **seed** (*int*) – seed

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  <span id="generativenetwork-train" />

  ### train

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.train" signature="GenerativeNetwork.train(quantum_instance=None, shots=None)" modifiers="abstract">
    Perform one training step w\.r.t to the generator’s parameters

    **Parameters**

    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – used to run generator network. Ignored for a classical network.
    *   **shots** (*int*) – Number of shots for hardware or qasm execution. Ignored for classical network

    **Returns**

    generator loss and updated parameters.

    **Return type**

    dict

    **Raises**

    **NotImplementedError** – not implemented
  </Function>
</Class>

